@@ -22,6 +22,13 @@ jdk17 :
 java -jar -Xlog:gc:my-gc.log:time,level -Xms64m -Xmx256m target/study-best-practice-0.0.1-SNAPSHOT.jar
 
 
+jdk17 :
+java -jar -Xlog:gc:my-gc-0813.log:time,level target/study-best-practice-0.0.1-SNAPSHOT.jar
+
+Remote :
+java -jar -Xlog:gc:my-gc-0813.log:time,level target/study-best-practice-0.0.1-SNAPSHOT.jar
+ --spring.config.location=file:///Users/bage/bage/config/application-remore-db.properties
+
 
 
 ```
@@ -90,6 +97,8 @@ brew install wrk
 请求
 This runs a benchmark for 30 seconds, using 12 threads, and keeping 400 HTTP connections open.
 ```
+wrk -t10 -c50 -d90s http://localhost:8000/user/insert
+
 wrk -t10 -c400 -d60s http://localhost:8000/user/insert
 
 wrk -t10 -c100 -d60s http://localhost:8000/user/insert
@@ -296,7 +305,7 @@ docker stats
 选择对应的JAVA 进程 
 
     java -jar -Xms64m -Xmx256m target/study-best-practice-0.0.1-SNAPSHOT.jar
-    
+
 
 
 
